# wagtail-shop-catalog

./: LICENSE  Makefile  README.md  pyproject.toml  testmanage.py  tox.ini
.github/workflows/: test.yaml
tests/: factories.py  test_factories.py  test_models.py
tests/testapp/: apps.py  settings.py
wagtail_shop_catalog/: models.py
wagtail_shop_catalog/migrations/: 0001_initial.py
wagtail_shop_catalog/templates/wagtail_shop_catalog/: catalog_index_page.html  product_page.html  product_variant_page.html
