[tool.poetry]
name = "wagtail-shop-catalog"
version = "0.1.0"
description = ""
authors = ["Nick Moreton <nickmoreton@me.com>"]
readme = "README.md"
packages = [{include = "wagtail_shop_catalog"}]

[tool.poetry.dependencies]
python = "^3.8"
wagtail = "~5.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
