[tool.poetry]
name = "wagtail-shop-catalog"
version = "0.1.0"
description = ""
authors = ["Nick Moreton <nickmoreton@me.com>"]
readme = "README.md"
packages = [{include = "wagtail_shop_catalog"}]

[tool.poetry.dependencies]
python = "^3.8.1"
wagtail = "~5.1"


[tool.poetry.group.dev.dependencies]
wagtail-factories = "^4.1.0"
coverage = "^7.2.7"
pre-commit = "^3.3.3"
black = "^23.7.0"
isort = "^5.12.0"
flake8 = "^6.1.0"
tox = "^4.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
